--- a/index.html
+++ b/index.html
@@ -142,16 +142,16 @@
 
         <ul class="list-unstyled">
           <li>
-            <a href="#!">تعلم الش تي ام ال</a>
+            <a href="https://www.youtube.com/watch?v=Wn3bVMLYHhs&list=PLMTdZ61eBnyrnapIyOphXAkIcR5DDOGkz">تعلم الش تي ام ال</a>
           </li>
           <li>
-            <a href="#!">نعلم السي اس اس</a>
+            <a href="https://www.youtube.com/watch?v=eN8JBvxdwME&list=PLMTdZ61eBnyoxjc9Prw0uhwgp6YZ2-_sg">نعلم السي اس اس</a>
           </li>
           <li>
-            <a href="#!">تعلم بوتستراب</a>
+            <a href="https://www.youtube.com/watch?v=Sfhsw8RieCg&list=PLMTdZ61eBnyrPiX-b1MNG-MSPAJ0OgpHA">تعلم بوتستراب</a>
           </li>
           <li>
-            <a href="#!">تعلم البي اش بي</a>
+            <a href="https://www.youtube.com/watch?v=l66t7kBmbTM&list=PLMTdZ61eBnypZGBMDMGYI48WfZEyAgQK_">تعلم البي اش بي</a>
           </li>
         </ul>
 
@@ -166,16 +166,16 @@
 
         <ul class="list-unstyled">
           <li>
-            <a href="#!">التسجيل بأكادمية شيار</a>
+            <a href="https://academy.codershiyar.com/">التسجيل بأكادمية شيار</a>
           </li>
           <li>
-            <a href="#!">تعلم برمجة قاعدة البيانات</a>
+            <a href="https://www.youtube.com/watch?v=1MJibb8SZX4&list=PLMTdZ61eBnyoQoEmLOcgTBdrAOVT-GFju">تعلم برمجة قاعدة البيانات</a>
           </li>
           <li>
-            <a href="#!">تعلم جافا</a>
+            <a href="https://www.youtube.com/watch?v=S0DmG9LhpWA&list=PLMTdZ61eBnyol1gLHHgsiQbcOayNljG4_">تعلم جافا</a>
           </li>
           <li>
-            <a href="#!">تعلم جافا سكريبت</a>
+            <a href="https://www.youtube.com/watch?v=g6tuPUqc3ew&list=PLMTdZ61eBnyp1nMM8mGRzpwuu6FNxFy0D">تعلم جافا سكريبت</a>
           </li>
         </ul>
 
