--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" lang="ar">
 <head>
     <meta charset="UTF-8">
+<meta name="google-site-verification" content="YH7mbfCODSkH3Bzc5dIFAnwyqm8VitV9mMgEhw2ssn0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yuba Eloualidi - Courses</title>
 <!-- Font Awesome -->
